# surfelwarp

./: .gitignore  CMakeLists.txt  CMakeLists_old.txt  package.xml
apps/surfelwarp_app/: CMakeLists.txt  main.cpp  main.cpp.autosave
common/: TimeLogger.cpp  TimeLogger.h
config/: config.yaml  rviz.rviz
core/: SurfelWarpSerial.cpp  SurfelWarpSerial.h
core/render/: Renderer.cpp  RendererDraw.cpp
core/warp_solver/: DensityForegroundJacobianResidual.cu
launch/: surfelwarp.launch
visualization/: PointCloudVisualizer.cpp
