<?xml version="1.0"?>
<package format="2">
  <name>surfelwarp</name>
  <version>0.0.0</version>
  <description>The surfelwarp package</description>

  <maintainer email="david@todo.todo">david</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
<!--   <depend>std_msgs</depend>
  <depend>rospy</depend>
  <depend>rostest</depend> -->


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
